--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 DATABASE_URL="postgresql://postgres:MATEMATIKA291299b@localhost:5432/si-perpustakaan-db?schema=public"
+
+SECRET_KEY=kavi_sangat_keren123@ASD
+SECRET_KEY_ADMIN=ebrahim_sangat_keren123@ASD
