[NEW FEATURE] users

--- a/.env
+++ b/.env
@@ -1,4 +1,5 @@
-DATABASE_URL="postgresql://postgres:MATEMATIKA291299b@localhost:5432/si-perpustakaan-db?schema=public"
+# DATABASE_URL="postgresql://postgres:MATEMATIKA291299b@localhost:5432/si-perpustakaan-db?schema=public"
+DATABASE_URL="file:./test.db"
 
 SECRET_KEY=kavi_sangat_keren123@ASD
 SECRET_KEY_ADMIN=ebrahim_sangat_keren123@ASD
