--- a/.env
+++ b/.env
@@ -3,3 +3,5 @@ DATABASE_URL="file:./test.db"
 
 SECRET_KEY=kavi_sangat_keren123@ASD
 SECRET_KEY_ADMIN=ebrahim_sangat_keren123@ASD
+
+UPLOADED_FILES_DESTINATION=./files/books
