--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ SECRET_KEY=kavi_sangat_keren123@ASD
 SECRET_KEY_ADMIN=ebrahim_sangat_keren123@ASD
 
 UPLOADED_FILES_DESTINATION=./files/books
+
+SUPER_ADMIN_NAME=SuperAdmin
+SUPER_ADMIN_PASSWORD=SuperAdmin
